拖拽事件绑定

--- a/src/components/tree/style/tree.less
+++ b/src/components/tree/style/tree.less
@@ -9,11 +9,8 @@ ol {
         padding-left: 20px;
         position: relative;
         margin: 5px 0;
-        -webkit-user-drag : none ;
-        user-drag : none ;
-            cursor: move;
     }
-    &-title {
+    &-title-wrap {
         display: inline-block;
         height: 40px;
         line-height: 40px;
@@ -37,7 +34,49 @@ ol {
         display:none !important;
     }
 }
-
+/*拖拽样式 开始*/
+.tree-draggable{
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  /* Required to make elements draggable in old WebKit */
+  -khtml-user-drag: element;
+  -webkit-user-drag: element;
+  cursor:move;
+}
+.tree-drag-over {
+  background-color: #5295E7;
+  color: white;
+  border: 2px #5295E7 solid;
+}
+.tree-drag-over-top {
+  border-top: 2px #5295E7 solid;
+}
+.tree-drag-over-bottom {
+  border-bottom: 2px #5295E7 solid;
+}
+.tree-drag-over.tree-drop-disabled {
+  background-color: #f6f6f6;
+  color: #ccc;
+  border: 2px #f6f6f6 solid;
+}
+.tree-drag-over-top.tree-drop-disabled {
+  border-top: 2px #f6f6f6 solid;
+}
+.tree-drag-over-bottom.tree-drop-disabled {
+  border-bottom: 2px #f6f6f6 solid;
+}
+.tree-drag-selected{
+  background-color:#deeaf7;
+}
+.tree-drag-disabled{
+   cursor:default;
+}
+.tree-drag-disabled :hover{
+   color:#bbb; 
+}
 .@{node-prefix-cls} {
     padding-left: 20px;
 }
