树形拖拽数据模型修改

--- a/src/components/tree/style/tree.less
+++ b/src/components/tree/style/tree.less
@@ -8,7 +8,6 @@ ol {
     &-item {
         padding-left: 20px;
         position: relative;
-        margin: 5px 0;
     }
     &-title-wrap {
         display: inline-block;
@@ -16,8 +15,6 @@ ol {
         line-height: 40px;
         width: 100%;
         border-radius: 5px;
-        padding-left:20px;
-        border: 1px solid #b9bec5;
     }
     &-arrow {
         position: absolute;
@@ -33,6 +30,13 @@ ol {
     &-arrow-hidden{
         display:none !important;
     }
+}
+.sp-tree-node-title{
+  padding-left:20px;
+  height:100%;
+  display:inline-block;
+  width:200px;
+  border-radius: 5px;
 }
 /*拖拽样式 开始*/
 .tree-draggable{
