--- a/src/components/tree/style/tree.less
+++ b/src/components/tree/style/tree.less
@@ -30,14 +30,19 @@ ol {
     &-arrow-hidden{
         display:none !important;
     }
+    &-node-title{
+
+    }
 }
 .sp-tree-node-title{
-  padding-left:20px;
-  height:100%;
-  display:inline-block;
-  width:200px;
-  border-radius: 5px;
+    display: inline-block;
+    width: 240px;
+    height: 28px;
+    line-height: 28px;
+    border-radius: 2px;
+    border: 2px solid transparent;
 }
+
 /*拖拽样式 开始*/
 .tree-draggable{
   -moz-user-select: none;
@@ -49,6 +54,7 @@ ol {
   -khtml-user-drag: element;
   -webkit-user-drag: element;
   cursor:move;
+  border-radius:2px;
 }
 .tree-drag-over {
   background-color: #5295E7;
