拖拽操作修改

--- a/src/components/tree/style/tree.less
+++ b/src/components/tree/style/tree.less
@@ -11,8 +11,9 @@ ol {
     }
     &-title-wrap {
         display: inline-block;
-        height: 40px;
-        line-height: 40px;
+        height: 30px;
+        line-height: 30px;
+        margin:5px 0;
         width: 100%;
         border-radius: 5px;
     }
